sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/README.md
# @azure/arm-hybridcompute client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-hybridcompute in some common scenarios.

| **File Name**                                                                                                                                           | **Description**                                                                                                                                                                                                                    |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [extensionMetadataGetSample.ts][extensionmetadatagetsample]                                                                                             | gets an Extension Metadata based on location, publisher, extensionType and version x-ms-original-file: 2026-07-15/extension/ExtensionMetadata_Get.json                                                                             |
| [extensionMetadataListSample.ts][extensionmetadatalistsample]                                                                                           | gets all Extension versions based on location, publisher, extensionType x-ms-original-file: 2026-07-15/extension/ExtensionMetadata_List.json                                                                                       |
| [extensionMetadataV2GetSample.ts][extensionmetadatav2getsample]                                                                                         | gets an Extension Metadata based on location, publisher, extensionType and version x-ms-original-file: 2026-07-15/extension/ExtensionMetadataV2_Get.json                                                                           |
| [extensionMetadataV2ListSample.ts][extensionmetadatav2listsample]                                                                                       | gets all Extension versions based on location, publisher, extensionType x-ms-original-file: 2026-07-15/extension/ExtensionMetadataV2_List.json                                                                                     |
| [extensionPublisherListSample.ts][extensionpublisherlistsample]                                                                                         | gets all Extension publishers based on the location x-ms-original-file: 2026-07-15/extension/ExtensionPublisher_List.json                                                                                                          |
| [extensionTypeListSample.ts][extensiontypelistsample]                                                                                                   | gets all Extension types based on location and publisher x-ms-original-file: 2026-07-15/extension/ExtensionType_List.json                                                                                                          |
| [gatewaysCreateOrUpdateSample.ts][gatewayscreateorupdatesample]                                                                                         | the operation to create or update a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_CreateOrUpdate.json                                                                                                                    |
| [gatewaysDeleteSample.ts][gatewaysdeletesample]                                                                                                         | the operation to delete a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_Delete.json                                                                                                                                      |
| [gatewaysGetSample.ts][gatewaysgetsample]                                                                                                               | retrieves information about the view of a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_Get.json                                                                                                                         |
| [gatewaysListByResourceGroupSample.ts][gatewayslistbyresourcegroupsample]                                                                               | the operation to get all gateways of a non-Azure machine x-ms-original-file: 2026-07-15/gateway/Gateway_ListByResourceGroup.json                                                                                                   |
| [gatewaysListBySubscriptionSample.ts][gatewayslistbysubscriptionsample]                                                                                 | the operation to get all gateways of a non-Azure machine x-ms-original-file: 2026-07-15/gateway/Gateway_ListBySubscription.json                                                                                                    |
| [gatewaysUpdateSample.ts][gatewaysupdatesample]                                                                                                         | the operation to update a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_Update.json                                                                                                                                      |
| [licenseProfilesCreateOrUpdateSample.ts][licenseprofilescreateorupdatesample]                                                                           | the operation to create or update a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_CreateOrUpdate.json                                                                                              |
| [licenseProfilesDeleteSample.ts][licenseprofilesdeletesample]                                                                                           | the operation to delete a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_Delete.json                                                                                                                |
| [licenseProfilesGetSample.ts][licenseprofilesgetsample]                                                                                                 | retrieves information about the view of a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_Get.json                                                                                                   |
| [licenseProfilesListSample.ts][licenseprofileslistsample]                                                                                               | the operation to get all license profiles of a non-Azure machine x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_List.json                                                                                            |
| [licenseProfilesUpdateSample.ts][licenseprofilesupdatesample]                                                                                           | the operation to update a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_Update.json                                                                                                                |
| [licensesCreateOrUpdateSample.ts][licensescreateorupdatesample]                                                                                         | the operation to create or update a license. x-ms-original-file: 2026-07-15/license/License_CreateOrUpdate.json                                                                                                                    |
| [licensesDeleteSample.ts][licensesdeletesample]                                                                                                         | the operation to delete a license. x-ms-original-file: 2026-07-15/license/License_Delete.json                                                                                                                                      |
| [licensesGetSample.ts][licensesgetsample]                                                                                                               | retrieves information about the view of a license. x-ms-original-file: 2026-07-15/license/License_Get.json                                                                                                                         |
| [licensesListByResourceGroupSample.ts][licenseslistbyresourcegroupsample]                                                                               | the operation to get all licenses of a non-Azure machine x-ms-original-file: 2026-07-15/license/License_ListByResourceGroup.json                                                                                                   |
| [licensesListBySubscriptionSample.ts][licenseslistbysubscriptionsample]                                                                                 | the operation to get all licenses of a non-Azure machine x-ms-original-file: 2026-07-15/license/License_ListBySubscription.json                                                                                                    |
| [licensesUpdateSample.ts][licensesupdatesample]                                                                                                         | the operation to update a license. x-ms-original-file: 2026-07-15/license/License_Update.json                                                                                                                                      |
| [licensesValidateLicenseSample.ts][licensesvalidatelicensesample]                                                                                       | the operation to validate a license. x-ms-original-file: 2026-07-15/license/License_ValidateLicense.json                                                                                                                           |
| [machineExtensionsCreateOrUpdateSample.ts][machineextensionscreateorupdatesample]                                                                       | the operation to create or update the extension. x-ms-original-file: 2026-07-15/extension/Extension_CreateOrUpdate.json                                                                                                            |
| [machineExtensionsDeleteSample.ts][machineextensionsdeletesample]                                                                                       | the operation to delete the extension. x-ms-original-file: 2026-07-15/extension/Extension_Delete.json                                                                                                                              |
| [machineExtensionsGetSample.ts][machineextensionsgetsample]                                                                                             | the operation to get the extension. x-ms-original-file: 2026-07-15/extension/Extension_Get.json                                                                                                                                    |
| [machineExtensionsListSample.ts][machineextensionslistsample]                                                                                           | the operation to get all extensions of a non-Azure machine x-ms-original-file: 2026-07-15/extension/Extension_List.json                                                                                                            |
| [machineExtensionsUpdateSample.ts][machineextensionsupdatesample]                                                                                       | the operation to create or update the extension. x-ms-original-file: 2026-07-15/extension/Extension_Update.json                                                                                                                    |
| [machineRunCommandsCreateOrUpdateSample.ts][machineruncommandscreateorupdatesample]                                                                     | the operation to create or update a run command. x-ms-original-file: 2026-07-15/runCommand/RunCommands_CreateOrUpdate.json                                                                                                         |
| [machineRunCommandsDeleteSample.ts][machineruncommandsdeletesample]                                                                                     | the operation to delete a run command. x-ms-original-file: 2026-07-15/runCommand/RunCommands_Delete.json                                                                                                                           |
| [machineRunCommandsGetSample.ts][machineruncommandsgetsample]                                                                                           | the operation to get a run command. x-ms-original-file: 2026-07-15/runCommand/RunCommands_Get.json                                                                                                                                 |
| [machineRunCommandsListSample.ts][machineruncommandslistsample]                                                                                         | the operation to get all the run commands of a non-Azure machine. x-ms-original-file: 2026-07-15/runCommand/RunCommands_List.json                                                                                                  |
| [machinesAssessPatchesSample.ts][machinesassesspatchessample]                                                                                           | the operation to assess patches on a hybrid machine identity in Azure. x-ms-original-file: 2026-07-15/machine/Machine_AssessPatches.json                                                                                           |
| [machinesCreateOrUpdateSample.ts][machinescreateorupdatesample]                                                                                         | the operation to create or update a hybrid machine. Please note some properties can be set only during machine creation. x-ms-original-file: 2026-07-15/machine/Machines_CreateOrUpdate.json                                       |
| [machinesDeleteSample.ts][machinesdeletesample]                                                                                                         | the operation to delete a hybrid machine. x-ms-original-file: 2026-07-15/machine/Machines_Delete.json                                                                                                                              |
| [machinesGetSample.ts][machinesgetsample]                                                                                                               | retrieves information about the model view or the instance view of a hybrid machine. x-ms-original-file: 2026-07-15/machine/Machines_Get.json                                                                                      |
| [machinesInstallPatchesSample.ts][machinesinstallpatchessample]                                                                                         | the operation to install patches on a hybrid machine identity in Azure. x-ms-original-file: 2026-07-15/machine/Machine_InstallPatches.json                                                                                         |
| [machinesListByResourceGroupSample.ts][machineslistbyresourcegroupsample]                                                                               | lists all the hybrid machines in the specified resource group. Use the nextLink property in the response to get the next page of hybrid machines. x-ms-original-file: 2026-07-15/machine/Machines_ListByResourceGroup.json         |
| [machinesListBySubscriptionSample.ts][machineslistbysubscriptionsample]                                                                                 | lists all the hybrid machines in the specified subscription. Use the nextLink property in the response to get the next page of hybrid machines. x-ms-original-file: 2026-07-15/machine/Machines_ListBySubscription.json            |
| [machinesUpdateSample.ts][machinesupdatesample]                                                                                                         | the operation to update a hybrid machine. x-ms-original-file: 2026-07-15/machine/Machines_Update.json                                                                                                                              |
| [networkProfileOperationsGetSample.ts][networkprofileoperationsgetsample]                                                                               | the operation to get network information of hybrid machine x-ms-original-file: 2026-07-15/NetworkProfile_Get.json                                                                                                                  |
| [networkSecurityPerimeterConfigurationsGetByPrivateLinkScopeSample.ts][networksecurityperimeterconfigurationsgetbyprivatelinkscopesample]               | gets the network security perimeter configuration for a private link scope. x-ms-original-file: 2026-07-15/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationGet.json                                     |
| [networkSecurityPerimeterConfigurationsListByPrivateLinkScopeSample.ts][networksecurityperimeterconfigurationslistbyprivatelinkscopesample]             | lists the network security perimeter configurations for a private link scope. x-ms-original-file: 2026-07-15/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationList.json                                  |
| [networkSecurityPerimeterConfigurationsReconcileForPrivateLinkScopeSample.ts][networksecurityperimeterconfigurationsreconcileforprivatelinkscopesample] | forces the network security perimeter configuration to refresh for a private link scope. x-ms-original-file: 2026-07-15/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationReconcile.json                  |
| [operationsListSample.ts][operationslistsample]                                                                                                         | gets a list of hybrid compute operations. x-ms-original-file: 2026-07-15/Operations_List.json                                                                                                                                      |
| [privateEndpointConnectionsCreateOrUpdateSample.ts][privateendpointconnectionscreateorupdatesample]                                                     | approve or reject a private endpoint connection with a given name. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_Update.json                                                                            |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                                                                     | deletes a private endpoint connection with a given name. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_Delete.json                                                                                      |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                                                                           | gets a private endpoint connection. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_Get.json                                                                                                              |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.ts][privateendpointconnectionslistbyprivatelinkscopesample]                                     | gets all private endpoint connections on a private link scope. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_List.json                                                                                  |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                                                                       | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopePrivateLinkResource_Get.json                                         |
| [privateLinkResourcesListByPrivateLinkScopeSample.ts][privatelinkresourceslistbyprivatelinkscopesample]                                                 | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopePrivateLinkResource_ListGet.json                                     |
| [privateLinkScopesCreateOrUpdateSample.ts][privatelinkscopescreateorupdatesample]                                                                       | creates (or updates) a Azure Arc PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_Create.json |
| [privateLinkScopesDeleteSample.ts][privatelinkscopesdeletesample]                                                                                       | deletes a Azure Arc PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_Delete.json                                                                                                                |
| [privateLinkScopesGetSample.ts][privatelinkscopesgetsample]                                                                                             | returns a Azure Arc PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_Get.json                                                                                                                   |
| [privateLinkScopesGetValidationDetailsForMachineSample.ts][privatelinkscopesgetvalidationdetailsformachinesample]                                       | returns a Azure Arc PrivateLinkScope's validation details for a given machine. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_GetValidationForMachine.json                                                      |
| [privateLinkScopesGetValidationDetailsSample.ts][privatelinkscopesgetvalidationdetailssample]                                                           | returns a Azure Arc PrivateLinkScope's validation details. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_GetValidation.json                                                                                    |
| [privateLinkScopesListByResourceGroupSample.ts][privatelinkscopeslistbyresourcegroupsample]                                                             | gets a list of Azure Arc PrivateLinkScopes within a resource group. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_ListByResourceGroup.json                                                                     |
| [privateLinkScopesListSample.ts][privatelinkscopeslistsample]                                                                                           | gets a list of all Azure Arc PrivateLinkScopes within a subscription. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_List.json                                                                                  |
| [privateLinkScopesUpdateTagsSample.ts][privatelinkscopesupdatetagssample]                                                                               | updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_UpdateTagsOnly.json                                           |
| [settingsGetSample.ts][settingsgetsample]                                                                                                               | returns the base Settings for the target resource. x-ms-original-file: 2026-07-15/settings/SettingsGet.json                                                                                                                        |
| [settingsPatchSample.ts][settingspatchsample]                                                                                                           | update the base Settings of the target resource. x-ms-original-file: 2026-07-15/settings/SettingsPatch.json                                                                                                                        |
| [settingsUpdateSample.ts][settingsupdatesample]                                                                                                         | updates the base Settings of the target resource. x-ms-original-file: 2026-07-15/settings/SettingsUpdate.json                                                                                                                      |
| [setupExtensionsSample.ts][setupextensionssample]                                                                                                       | the operation to Setup Machine Extensions. x-ms-original-file: 2026-07-15/extension/Extension_Add.json                                                                                                                             |
| [upgradeExtensionsSample.ts][upgradeextensionssample]                                                                                                   | the operation to Upgrade Machine Extensions. x-ms-original-file: 2026-07-15/extension/Extensions_Upgrade.json                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/extensionMetadataGetSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/extensionMetadataGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[extensionmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/extensionMetadataGetSample.ts
[extensionmetadatalistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/extensionMetadataListSample.ts
[extensionmetadatav2getsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/extensionMetadataV2GetSample.ts
[extensionmetadatav2listsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/extensionMetadataV2ListSample.ts
[extensionpublisherlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/extensionPublisherListSample.ts
[extensiontypelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/extensionTypeListSample.ts
[gatewayscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/gatewaysCreateOrUpdateSample.ts
[gatewaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/gatewaysDeleteSample.ts
[gatewaysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/gatewaysGetSample.ts
[gatewayslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/gatewaysListByResourceGroupSample.ts
[gatewayslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/gatewaysListBySubscriptionSample.ts
[gatewaysupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/gatewaysUpdateSample.ts
[licenseprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licenseProfilesCreateOrUpdateSample.ts
[licenseprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licenseProfilesDeleteSample.ts
[licenseprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licenseProfilesGetSample.ts
[licenseprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licenseProfilesListSample.ts
[licenseprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licenseProfilesUpdateSample.ts
[licensescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesCreateOrUpdateSample.ts
[licensesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesDeleteSample.ts
[licensesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesGetSample.ts
[licenseslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesListByResourceGroupSample.ts
[licenseslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesListBySubscriptionSample.ts
[licensesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesUpdateSample.ts
[licensesvalidatelicensesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/licensesValidateLicenseSample.ts
[machineextensionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineExtensionsCreateOrUpdateSample.ts
[machineextensionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineExtensionsDeleteSample.ts
[machineextensionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineExtensionsGetSample.ts
[machineextensionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineExtensionsListSample.ts
[machineextensionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineExtensionsUpdateSample.ts
[machineruncommandscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineRunCommandsCreateOrUpdateSample.ts
[machineruncommandsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineRunCommandsDeleteSample.ts
[machineruncommandsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineRunCommandsGetSample.ts
[machineruncommandslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machineRunCommandsListSample.ts
[machinesassesspatchessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesAssessPatchesSample.ts
[machinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesCreateOrUpdateSample.ts
[machinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesDeleteSample.ts
[machinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesGetSample.ts
[machinesinstallpatchessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesInstallPatchesSample.ts
[machineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesListByResourceGroupSample.ts
[machineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesListBySubscriptionSample.ts
[machinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/machinesUpdateSample.ts
[networkprofileoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/networkProfileOperationsGetSample.ts
[networksecurityperimeterconfigurationsgetbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/networkSecurityPerimeterConfigurationsGetByPrivateLinkScopeSample.ts
[networksecurityperimeterconfigurationslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/networkSecurityPerimeterConfigurationsListByPrivateLinkScopeSample.ts
[networksecurityperimeterconfigurationsreconcileforprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/networkSecurityPerimeterConfigurationsReconcileForPrivateLinkScopeSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/operationsListSample.ts
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateEndpointConnectionsCreateOrUpdateSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateEndpointConnectionsListByPrivateLinkScopeSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkResourcesGetSample.ts
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkResourcesListByPrivateLinkScopeSample.ts
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesCreateOrUpdateSample.ts
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesDeleteSample.ts
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesGetSample.ts
[privatelinkscopesgetvalidationdetailsformachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesGetValidationDetailsForMachineSample.ts
[privatelinkscopesgetvalidationdetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesGetValidationDetailsSample.ts
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesListByResourceGroupSample.ts
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesListSample.ts
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/privateLinkScopesUpdateTagsSample.ts
[settingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/settingsGetSample.ts
[settingspatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/settingsPatchSample.ts
[settingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/settingsUpdateSample.ts
[setupextensionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/setupExtensionsSample.ts
[upgradeextensionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/typescript/src/upgradeExtensionsSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-hybridcompute
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/hybridcompute/arm-hybridcompute/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
